--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cviebrock/eloquent-sluggable": "^12.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "xoco70/laravel-tournaments": "^0.17.0"
